--- a/FE/backend/src/app/components/products/digital/digital-add/digital-add.component.scss
+++ b/FE/backend/src/app/components/products/digital/digital-add/digital-add.component.scss
@@ -14,3 +14,14 @@
         padding-bottom: 50px
     }
 }
+
+.column{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    > div {
+        display: flex;
+        flex-direction: column;
+        width: 45%;
+    }
+}
