--- a/FE/invoice/assets/css/bootstrap.css
+++ b/FE/invoice/assets/css/bootstrap.css
@@ -12213,10 +12213,11 @@ textarea.form-control-lg {
   .carousel-control-prev:hover, .carousel-control-prev:focus,
   .carousel-control-next:hover,
   .carousel-control-next:focus {
+    display: none;
     color: #fff;
     text-decoration: none;
     outline: 0;
-    opacity: 0.9; }
+    opacity: 1; }
 
 .carousel-control-prev {
   left: 0; }
