--- a/FE/frontend/multikart-ssr/src/app/home/widgets/slider/slider.component.html
+++ b/FE/frontend/multikart-ssr/src/app/home/widgets/slider/slider.component.html
@@ -8,7 +8,7 @@
 	            <div class="slider-contain">
 	              <div>
 	                <h4>{{slider.title}}</h4>
-	                <h1>{{slider.subTitle}}</h1>
+	                <h1 class="custom">{{slider.subTitle}}</h1>
 	                <a [routerLink]="['/shop/list']"  
 	                   [queryParams]="{ search: slider.subTitle}" 
 	                   class="btn btn-solid" [ngClass]="buttonClass">
