--- a/FE/frontend/multikart-ssr/src/app/shared/components/breadcrumb/breadcrumb.component.html
+++ b/FE/frontend/multikart-ssr/src/app/shared/components/breadcrumb/breadcrumb.component.html
@@ -5,6 +5,7 @@
       <div class="col-sm-6">
         <div class="page-title">
           <h2>{{ title }}</h2>
+          <p style="margin: 10px;">{{middle}}</p>
         </div>
       </div>
       <div class="col-sm-6">
