--- a/FE/frontend/multikart-ssr/src/app/shared/components/settings/settings.component.html
+++ b/FE/frontend/multikart-ssr/src/app/shared/components/settings/settings.component.html
@@ -59,7 +59,7 @@
         </li>
         <li>
           <div class="total">
-            <h5>subtotal : <span>{{ total | number : '1.2-2' }}</span></h5>
+            <h5>subtotal : <span>{{ total | number : '1.2-2' }}€</span></h5>
           </div>
         </li>
         <li>
